@@ -380,7 +380,7 @@ icmp_send_response(struct pbuf *p, u8_t type, u8_t code)
   {
     ip4_addr_t iphdr_dst;
     ip4_addr_copy(iphdr_dst, iphdr->dest);
-    netif = ip4_route_src(&iphdr_dst, &iphdr_src);
+    netif = ip4_route_src(&iphdr_src, &iphdr_dst);
   }
 #else
   netif = ip4_route(&iphdr_src);
